InsuranceOrg/force-app/main/default/objects/vlocity_ins__AccountRegulatoryAction__c/vlocity_ins__AccountRegulatoryAction__c.object-meta.xml
<CustomObject>
    <description>Represents the current and past regulatory actions taken against an insurance agency/producer. Master-detail child object of an Account.</description>
    <label>Account Regulatory Action</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acount Regulatory Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>