InsuranceOrg/force-app/main/default/objects/vlocity_ins__AccountRegulatoryAction__c/fields/vlocity_ins__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AccountId__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Regulatory Actions</relationshipLabel>
    <relationshipName>AccountRegulatoryActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>