InsuranceOrg/force-app/main/default/objects/vlocity_ins__AccountRegulatoryAction__c/fields/vlocity_ins__PenaltyAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PenaltyAmount__c</fullName>
    <label>Penalty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>